changed initial heading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="answer-container" class="answer-box">
-        <h1 id="question">where is question vro whn you are not at end yah yah ?</h1>
+        <h1 id="question">click on the start button to take quiz</h1>
         <div id="options" class="option-box hide">
             <div class="button-box">
                 <button id="a" class="btn glow answer">first option will be correct option</button>
