adding reload button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="answer-container" class="answer-box">
         <h1 id="question">click on the start button to take quiz</h1>
+        
         <div id="options" class="option-box hide">
             <div class="button-box">
                 <button id="a" class="btn glow answer">first option will be correct option</button>
@@ -32,6 +33,7 @@
         </div>
         
     </div>
+    <button onclick="refresh()" id="reload" class="btn glow hide reload-button">reload</button>
 
 
 
