changing button name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         
     </div>
-    <button onclick="refresh()" id="reload" class="btn glow hide reload-button">reload</button>
+    <button onclick="refresh()" id="reload" class="btn glow hide reload-button">retake</button>
 
 
 
